[package]
name = "private"
version = "0.0.2"
# TODO
#
#edition = "2024"
edition = "2021"

# edition = "2021"

# Full functionality and tests need Rust 1.89.0+.
#
# See also .github/workflows/main.yml.
#
# @TODO: fin with cargo msrv, but min. 1.80.0 because of
# https://doc.rust-lang.org/std/sync/struct.LazyLock.html
#
rust-version = "1.80.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Help you make Rust code more accident-proof. Macros to enable other crates to export macros (either declarative/by example/using `macro_rules`, or procedural) with private-like variables or constants."

categories = ["development-tools", "no-std", "no-std::no-alloc", "rust-patterns", "security"]

keywords = ["safe", "safety", "unsafe", "isolation", "review"]

repository = "https://github.com/prudent-rs/private"
homepage = "https://github.com/prudent-rs/private"

[lib]
proc-macro = true

# "lints" key is supported only since Rust 1.74.0 (November 2023). But we include this even though
# our rust-version/MSRV is 1.71.0.
[lints.rust]
unexpected_cfgs = { level = "forbid"}
unknown_lints = { level = "forbid"}

[dependencies]
proc-macro-rules = "0.4.0"
proc-macro2 = {version="1.0.60", features=["span-locations"] }
# for local development:
#
# dis = { version = "0.0.2", path = "../dis", features = ["proc-macro2-diagnostics"]}
dis = { version = "0.0.2", features = ["proc-macro2-diagnostics"]}

# EXACT VERSION with = prefix
mce-lib = {version="= 0.0.4", path="../mce-lib", features=["std"]}

quote = "1.0.26"

# We need syn's feature "derive" because of https://docs.rs/syn/latest/syn/struct.Path.html
syn = {version = "2.0.15", features=["derive"]}

proc-macro2-diagnostics = "0.10.1"

[build-dependencies]
# random_str = "1.1.0"
#
#random_str = {git="https://github.com/peter-lyons-kehl/random_str", branch="with_length_and_deprecation_warnings_in_tests"}
#
random_str = {version="1.1.0", path="../random_str/random_str"}
